--- a/.travis.yml
+++ b/.travis.yml
@@ -47,10 +47,11 @@ matrix:
       env: TEST_SUITE=integration_integrity
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -y -qq postfix parallel
+  - sudo apt-get install -y -qq postfix
   - sudo apt-get install -y -qq mlocate
   - sudo updatedb
   - composer self-update
+  - chmod a+x $TRAVIS_BUILD_DIR/dev/travis/parallel
 before_script:
   # Mock mail
   - sudo service postfix stop
@@ -73,8 +74,8 @@ before_script:
   - bash -c "if [ '$TEST_SUITE' == 'functional' ]; then sudo bash $TRAVIS_BUILD_DIR/dev/travis/install-firefox.sh; fi"
 script:
   # Unit tests
-  - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | parallel --gnu -P 3 'echo \"Running {} tests\"; hhvm -c ${TRAVIS_BUILD_DIR}/dev/travis/php.ini -v Eval.Jit=1 -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
-  - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | parallel --gnu -P 3 'echo \"Running {} tests\"; php -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
+  - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | $TRAVIS_BUILD_DIR/dev/travis/parallel --gnu -P 3 'echo \"Running {} tests\"; hhvm -c ${TRAVIS_BUILD_DIR}/dev/travis/php.ini -v Eval.Jit=1 -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
+  - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | $TRAVIS_BUILD_DIR/dev/travis/parallel --gnu -P 3 'echo \"Running {} tests\"; php -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
   # Integration tests
   - bash -c "if [ '$TEST_SUITE' == 'integration' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then bash $TRAVIS_BUILD_DIR/dev/travis/hhvm/integration.sh 'hhvm -c $TRAVIS_BUILD_DIR/dev/travis/php.ini -v Eval.Jit=1 $TRAVIS_BUILD_DIR/vendor/phpunit/phpunit/phpunit -- '; fi"
   - bash -c "if [ '$TEST_SUITE' == 'integration' ] && [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then  $TRAVIS_BUILD_DIR/dev/travis/hhvm/integration.sh '$TRAVIS_BUILD_DIR/vendor/bin/phpunit'; fi"
