--- a/.travis.yml
+++ b/.travis.yml
@@ -62,8 +62,7 @@ before_script:
   # Create DB for Integration tests
   - if [[ "$NEED_DB" == "true" ]]; then mysql -e 'create database magento_integration_tests;'; mv dev/tests/integration/etc/install-config-mysql.travis.php.dist dev/tests/integration/etc/install-config-mysql.php; fi
   - bash -c "if [ '$TEST_SUITE' == 'static_phpcs' ] || [ '$TEST_SUITE' == 'static_annotation' ]; then composer global require "squizlabs/php_codesniffer=1.5.2"; fi"
-  - bash -c "if [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then sudo bash $TRAVIS_BUILD_DIR/dev/travis/hhvm.sh; fi;"
-  - bash -c "if [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then sudo bash $TRAVIS_BUILD_DIR/dev/travis/php.sh; fi;"
+  - sudo bash $TRAVIS_BUILD_DIR/dev/travis/${$TRAVIS_PHP_VERSION}.sh
   - phpenv rehash;
   - composer install --no-interaction --prefer-source --dev >&2> /dev/null; if [[ $? -ne 0 ]]; then exit $?; fi
   - export DISPLAY=:99.0
