--- a/.travis.yml
+++ b/.travis.yml
@@ -77,7 +77,7 @@ script:
   - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | $TRAVIS_BUILD_DIR/dev/travis/parallel --nn --gnu -P 5 'echo \"Running {} tests\"; hhvm -c ${TRAVIS_BUILD_DIR}/dev/travis/php.ini -v Eval.Jit=1 -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
   - bash -c "if [ '$TEST_SUITE' == 'unit' ] && [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then cd ./dev/tests/unit/; ls -dX ./testsuite/Magento/* | grep -v _files | $TRAVIS_BUILD_DIR/dev/travis/parallel --nn --gnu -P 5 'echo \"Running {} tests\"; php -f ${TRAVIS_BUILD_DIR}/vendor/phpunit/phpunit/phpunit -- --configuration ./phpunit.xml.dist {};' || exit 1; fi"
   # Integration tests
-  - bash -c "if [ '$TEST_SUITE' == 'integration' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then bash $TRAVIS_BUILD_DIR/dev/travis/hhvm/integration.sh 'hhvm -c $TRAVIS_BUILD_DIR/dev/travis/php.ini $TRAVIS_BUILD_DIR/vendor/phpunit/phpunit/phpunit -- ' $TRAVIS_BUILD_DIR; fi"
+  - bash -c "if [ '$TEST_SUITE' == 'integration' ] && [ '$TRAVIS_PHP_VERSION' == 'hhvm' ]; then bash $TRAVIS_BUILD_DIR/dev/travis/hhvm/integration.sh 'hhvm -c $TRAVIS_BUILD_DIR/dev/travis/php.ini -f $TRAVIS_BUILD_DIR/vendor/phpunit/phpunit/phpunit -- ' $TRAVIS_BUILD_DIR; fi"
   - bash -c "if [ '$TEST_SUITE' == 'integration' ] && [ '$TRAVIS_PHP_VERSION' != 'hhvm' ]; then  $TRAVIS_BUILD_DIR/dev/travis/hhvm/integration.sh '$TRAVIS_BUILD_DIR/vendor/bin/phpunit'; fi"
   # Integration integrity tests
   - bash -c "if [ '$TEST_SUITE' == 'integration_integrity' ]; then cd dev/tests/integration/; $TRAVIS_BUILD_DIR/vendor/bin/phpunit -c phpunit.xml.dist testsuite/Magento/Test/Integrity; fi"
