--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y -qq postfix
 #  - sudo apt-get install -y -qq mlocate
-#  - sudo updatedb
+  - sudo updatedb
   - composer self-update
 before_script:
   - chmod a+x $TRAVIS_BUILD_DIR/dev/travis/parallel
