--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ before_script:
   - sudo service postfix stop
   - smtp-sink -d "%d.%H.%M.%S" localhost:2500 1000 &
   # Install MySQL 5.6, create DB for integration tests
-  - if [[ "$NEED_DB" == "true" ]]; then bash $TRAVIS_BUILD_DIR/dev/travis/install-mysql-5.6.sh; fi;
+  - if [[ "$NEED_DB" == "true" ]]; then bash $TRAVIS_BUILD_DIR/dev/travis/install-mysql-5.6.sh $TRAVIS_PHP_VERSION; fi;
   - mysql -uroot -e "SET @@global.sql_mode = NO_ENGINE_SUBSTITUTION"
   # Create DB for Integration tests
   - if [[ "$NEED_DB" == "true" ]]; then mysql -e 'create database magento_integration_tests;'; mv dev/tests/integration/etc/install-config-mysql.travis.php.dist dev/tests/integration/etc/install-config-mysql.php; fi
