--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ before_script:
   # Install MySQL 5.6, create DB for integration tests
   - if [[ "$NEED_DB" == "true" ]]; then bash $TRAVIS_BUILD_DIR/dev/travis/install-mysql-5.6.sh $TRAVIS_PHP_VERSION; fi;
   - mysql -uroot -e "SET @@global.sql_mode = NO_ENGINE_SUBSTITUTION"
+  - phpenv rehash;
   # Create DB for Integration tests
   - if [[ "$NEED_DB" == "true" ]]; then mysql -e 'create database magento_integration_tests;'; mv dev/tests/integration/etc/install-config-mysql.travis.php.dist dev/tests/integration/etc/install-config-mysql.php; fi
   - bash -c "if [ '$TEST_SUITE' == 'static_phpcs' ] || [ '$TEST_SUITE' == 'static_annotation' ]; then composer global require "squizlabs/php_codesniffer=1.5.2"; fi"
